# tui-pdf-viewer

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: generate_pdf.py
src/tui_pdf_viewer/: app.py
src/tui_pdf_viewer/utils/: pdf_handler.py
src/tui_pdf_viewer/widgets/: goto_page_modal.py  help_screen.py  open_file_modal.py  pdf_viewer.py
