[project]
name = "tui-pdf-viewer"
version = "0.1.0"
description = "A TUI PDF Viewer using Textual"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "textual>=0.41.0",
    "pymupdf>=1.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tui_pdf_viewer"]

[dependency-groups]
dev = [
    "reportlab>=4.4.3",
]
